changed poster movie tags to a tags and added alt text to each movie

--- a/index.html
+++ b/index.html
@@ -11,11 +11,14 @@
 
 <body>
   <div class="moviePosters">
-    <img id="Dune" src="/filmvisarna/images/Dune.jpg" alt="">
-    <img id="Eternals" src="/filmvisarna/images/Eternals.png" alt="">
-    <img id="Finch" src="/filmvisarna/images/Finch.png" alt="">
-    <img id="Red-Notice" src="/filmvisarna/images/Red-Notice.png" alt="">
-    <img id="The-Matrix-Resurrections" src="/filmvisarna/images/The-Matrix-Resurrections.png" alt="">
+    <a href=""><img id="Dune" src="/filmvisarna/images/Dune.jpg" alt="Dune movie"></a>
+
+    <a href=""><img id="Eternals" src="/filmvisarna/images/Eternals.png" alt="Eternals movie"></a>
+
+    <a href=""><img src="/filmvisarna/images/Finch.png" alt="Finch movie"></a>
+
+    <a href=""><img src="/filmvisarna/images/Red-Notice.png" alt="Red Notice movie"></a>
+    <a href=""><img src="/filmvisarna/images/The-Matrix-Resurrections.png" alt="The Matrix Resurrections movie"></a>
   </div>
 </body>
 
