reapplied ID's for the movie posters

--- a/index.html
+++ b/index.html
@@ -15,10 +15,11 @@
 
     <a href=""><img id="Eternals" src="/filmvisarna/images/Eternals.png" alt="Eternals movie"></a>
 
-    <a href=""><img src="/filmvisarna/images/Finch.png" alt="Finch movie"></a>
+    <a href=""><img id="Finch" src="/filmvisarna/images/Finch.png" alt="Finch movie"></a>
 
-    <a href=""><img src="/filmvisarna/images/Red-Notice.png" alt="Red Notice movie"></a>
-    <a href=""><img src="/filmvisarna/images/The-Matrix-Resurrections.png" alt="The Matrix Resurrections movie"></a>
+    <a href=""><img id="Red-Notice" src="/filmvisarna/images/Red-Notice.png" alt="Red Notice movie"></a>
+    <a href=""><img id="The-Matrix-Resurrections" src="/filmvisarna/images/The-Matrix-Resurrections.png"
+        alt="The Matrix Resurrections movie"></a>
   </div>
 </body>
 
