--- a/examples/seats_booking_example/seats_booking_example.html
+++ b/examples/seats_booking_example/seats_booking_example.html
@@ -14,10 +14,11 @@
     <div class="movie-container">
         <label>Pick a movie</label>
         <select id="movie">
-            <option value="10">Avengers: Endgame ($10)</option>
-            <option value="12">Joker ($12)</option>
-            <option value="8">Toy Story ($8)</option>
-            <option value="9">The Lion King ($9)</option>
+            <option value="10">Dune ($10)</option>
+            <option value="12">Eternals ($12)</option>
+            <option value="8">Finch ($8)</option>
+            <option value="9">Red Notice ($9)</option>
+            <option value="11">The Matrix Resurrections ($11)</option>
         </select>
     </div>
 
