added site for dune

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <body>
   <div class="moviePosters">
-    <a href=""><img id="Dune" src="/filmvisarna/images/Dune.jpg" alt="Dune movie"></a>
+    <a href="/filmvisarna/Dune.html"><img id="Dune" src="/filmvisarna/images/Dune.jpg" alt="Dune movie"></a>
 
     <a href=""><img id="Eternals" src="/filmvisarna/images/Eternals.png" alt="Eternals movie"></a>
 
