--- a/index.html
+++ b/index.html
@@ -11,15 +11,19 @@
 
 <body>
   <div class="moviePosters">
-    <a href="/filmvisarna/Dune.html"><img id="Dune" src="/filmvisarna/images/Dune.jpg" alt="Dune movie"></a>
+    <a href="/filmvisarna/movies html/Dune.html"><img id="Dune" src="/filmvisarna/images/Dune.jpg" alt="Dune movie"></a>
 
-    <a href=""><img id="Eternals" src="/filmvisarna/images/Eternals.png" alt="Eternals movie"></a>
+    <a href="/filmvisarna/movies html/Eternals.html"><img id="Eternals" src="/filmvisarna/images/Eternals.png"
+        alt="Eternals movie"></a>
 
-    <a href=""><img id="Finch" src="/filmvisarna/images/Finch.png" alt="Finch movie"></a>
+    <a href="/filmvisarna/movies html/Finch.html"><img id="Finch" src="/filmvisarna/images/Finch.png"
+        alt="Finch movie"></a>
 
-    <a href=""><img id="Red-Notice" src="/filmvisarna/images/Red-Notice.png" alt="Red Notice movie"></a>
-    <a href=""><img id="The-Matrix-Resurrections" src="/filmvisarna/images/The-Matrix-Resurrections.png"
-        alt="The Matrix Resurrections movie"></a>
+    <a href="/filmvisarna/movies html/Red-Notice.html"><img id="Red-Notice" src="/filmvisarna/images/Red-Notice.png"
+        alt="Red Notice movie"></a>
+
+    <a href="/filmvisarna/movies html/The-Matrix-Resurrection.html"><img id="The-Matrix-Resurrections"
+        src="/filmvisarna/images/The-Matrix-Resurrections.png" alt="The Matrix Resurrections movie"></a>
   </div>
 </body>
 
