added show_schedule.js, elements in index.html and some styling in style.css

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -6,17 +6,30 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
+  <link rel="stylesheet" href="/style.css">
 </head>
 
 <body>
-  <main>Biograf</main>
+  <main>
 
-  <div id="movies">Filmer</div>
+    <h1>Biograf</h1>
+
+    <div id="movies">Filmer</div>
+
+    <div id="showSchedule">
+      <h2>Visningar</h2>
+      <p>Välj datum</p>
+      <select id="dateSelect"></select>
+      <div id="showInfo"></div>
+    </div>
+
+  </main>
 
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   <script src="/jsonflex.js"></script>
   <script src="/js/book.js"></script>
   <script src="/js/main.js"></script>
+  <script src="/js/show_schedule.js"></script>
 </body>
 
 </html>
