--- a/movies html/The-Matrix-Resurrection.html
+++ b/movies html/The-Matrix-Resurrection.html
@@ -5,11 +5,12 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="/frontend/style.css">
   <title>Document</title>
 </head>
 
 <body>
-  <img src="/filmvisarna/images/The-Matrix-Resurrections.png" alt="">
+  <img src="/images/The-Matrix-Resurrections.png" alt="">
 </body>
 
 </html>
