--- a/index.html
+++ b/index.html
@@ -5,25 +5,22 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="/filmvisarna/style.css">
+  <link rel="stylesheet" href="/frontend/style.css">
   <title>Filmvisarna</title>
 </head>
 
 <body>
   <div class="moviePosters">
-    <a href="/filmvisarna/movies html/Dune.html"><img id="Dune" src="/filmvisarna/images/Dune.jpg" alt="Dune movie"></a>
+    <a href="/movies html/Dune.html"><img id="Dune" src="/images/Dune.jpg" alt="Dune movie"></a>
 
-    <a href="/filmvisarna/movies html/Eternals.html"><img id="Eternals" src="/filmvisarna/images/Eternals.png"
-        alt="Eternals movie"></a>
+    <a href="/movies html/Eternals.html"><img id="Eternals" src="/images/Eternals.png" alt="Eternals movie"></a>
 
-    <a href="/filmvisarna/movies html/Finch.html"><img id="Finch" src="/filmvisarna/images/Finch.png"
-        alt="Finch movie"></a>
+    <a href="/movies html/Finch.html"><img id="Finch" src="/images/Finch.png" alt="Finch movie"></a>
 
-    <a href="/filmvisarna/movies html/Red-Notice.html"><img id="Red-Notice" src="/filmvisarna/images/Red-Notice.png"
-        alt="Red Notice movie"></a>
+    <a href="/movies html/Red-Notice.html"><img id="Red-Notice" src="/images/Red-Notice.png" alt="Red Notice movie"></a>
 
-    <a href="/filmvisarna/movies html/The-Matrix-Resurrection.html"><img id="The-Matrix-Resurrections"
-        src="/filmvisarna/images/The-Matrix-Resurrections.png" alt="The Matrix Resurrections movie"></a>
+    <a href="/movies html/The-Matrix-Resurrection.html"><img id="The-Matrix-Resurrections"
+        src="/images/The-Matrix-Resurrections.png" alt="The Matrix Resurrections movie"></a>
   </div>
 </body>
 
