added trailers and styled trailers + posters

--- a/movies html/Dune.html
+++ b/movies html/Dune.html
@@ -10,8 +10,11 @@
 </head>
 
 <body>
-  <img src="/images/Dune.jpg" alt="Dune movie">
+  <img class="about-movie-poster" src="/images/Dune.jpg" alt="Dune movie">
 
+  <iframe class="movie-trailer" src="https://www.youtube.com/embed/8g18jFHCLXk" title="YouTube video player"
+    frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+    allowfullscreen></iframe>
 
 </body>
 
