--- a/movies html/Eternals.html
+++ b/movies html/Eternals.html
@@ -10,7 +10,12 @@
 </head>
 
 <body>
-  <img src="/images/Eternals.png" alt="">
+  <img class="about-movie-poster" src="/images/Eternals.png" alt="">
+
+  <iframe class="movie-trailer" src="https://www.youtube.com/embed/0WVDKZJkGlY" title="YouTube video player"
+    frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+    allowfullscreen></iframe>
+
 </body>
 
 </html>
