--- a/frontend/index.html
+++ b/frontend/index.html
@@ -11,6 +11,22 @@
 
 <body>
   <main>
+    <header>
+      <div class="nav-container">
+
+        <img class="logo" src="images/logo.jpg" alt="logo"></ul>
+
+        <nav class="nav-list">
+          <ul>
+            <li><a href="#">Start</a></li>
+            <li><a href="#">Filmer</a></li>
+            <li><a href="#">Om oss</a></li>
+            <li><a href="#">kontakt</a></li>
+          </ul>
+        </nav>
+      </div>
+    </header>
+
 
     <h1>Biograf</h1>
 
