--- a/frontend/index.html
+++ b/frontend/index.html
@@ -20,6 +20,30 @@
 <body>
   <div id="navigation"></div>
   <main>
+    
+    
+    <div class="container">
+      <div class="image">
+          <img src="/images/Dune.jpg" alt="">
+      </div>
+      <div class="image">
+          <img src="/images/Dune.jpg" alt="">
+      </div>
+      <div class="image">
+        <img src="/images/Finch.png" alt="">
+      </div>
+      <div class="image">
+          <img src="/images/Red-Notice.png" alt="">
+      </div>
+      <div class="image">
+          <img src="/images/The-Matrix-Resurrections.png" alt="">
+      </div>
+
+      <div class="button">
+          <a onclick="nextimg(-1)" class="prev">&#10094;</a>
+          <a onclick="nextimg(1)" class="next">&#10095;</a>
+      </div>
+      </div>
 
     <div id="movies">
       <a href="/movies html/Dune.html"><img id="Dune" src="/images/Dune.jpg" alt="Dune movie"></a>
