added trailer function for dynamic moviePage

--- a/frontend/movies html/moviePage.html
+++ b/frontend/movies html/moviePage.html
@@ -1,19 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="/frontend/style.css">
 </head>
+
 <body>
     <h1>movies</h1>
-     <div class="movie-description">
-         
+    <div class="movie-title"></div>
+    <div class="movie-trailer-container">
+        <iframe class="movie-trailer" src="" frameborder="0"></iframe>
+    </div>
 
-     </div>
 
-
- <script src="/frontend/js/moviePage.js"></script>
+    <script src="/frontend/js/moviePage.js"></script>
 </body>
+
 </html>
