--- a/frontend/index.html
+++ b/frontend/index.html
@@ -20,7 +20,12 @@
 <body>
   <div id="navigation"></div>
   <main>
-
+    <div id="showSchedule">
+      <h2>Visningar</h2>
+      <p>Välj datum</p>
+      <select id="dateSelect"></select>
+      <div id="showInfo"></div>
+    </div>
 
     <div class="container">
       <div class="image">
@@ -38,7 +43,9 @@
       <div class="image">
         <img src="/images/The-Matrix-Resurrections.png" alt="">
       </div>
+    </div>
 
+    <div class="container">
       <div class="button">
         <a onclick="nextimg(-1)" class="prev">&#10094;</a>
         <a onclick="nextimg(1)" class="next">&#10095;</a>
@@ -57,19 +64,11 @@
 
       <a href="/movies html/The-Matrix-Resurrection.html"><img id="The-Matrix-Resurrections"
           src="/images/The-Matrix-Resurrections.png" alt="The Matrix Resurrections movie"></a>
-
-
-
-    </div>
-
-    <div id="showSchedule">
-      <h2>Visningar</h2>
-      <p>Välj datum</p>
-      <select id="dateSelect"></select>
-      <div id="showInfo"></div>
     </div>
   </main>
+
   <footer id="bottom"></footer>
+
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   <script src="/jsonflex.js"></script>
   <script src="/js/book.js"></script>
