--- a/frontend/index.html
+++ b/frontend/index.html
@@ -2,18 +2,19 @@
 <html lang="en">
 
 <head>
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-  <script>
-    $(function () {
-      $('#navigation').load('nav.html');
-    });
-  </script>
+
 
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Filmvisarna</title>
   <link rel="stylesheet" href="/style.css">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+  <script>
+    $(function () {
+      $('#navigation').load('/nav.html');
+    });
+  </script>
 
 </head>
 
