--- a/frontend/movies html/Dune.html
+++ b/frontend/movies html/Dune.html
@@ -2,14 +2,22 @@
 <html lang="en">
 
 <head>
+
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="/style.css">
   <title>Dune</title>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+  <script>
+    $(function () {
+      $('#navigation').load('/nav.html');
+    });
+  </script>
 </head>
 
 <body>
+  <div id="navigation"></div>
   <iframe class="movie-trailer" src="https://www.youtube.com/embed/8g18jFHCLXk" title="YouTube video player"
     frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
     allowfullscreen>
