--- a/frontend/movies html/The-Matrix-Resurrection.html
+++ b/frontend/movies html/The-Matrix-Resurrection.html
@@ -7,9 +7,16 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="/style.css">
   <title>The Matrix Resurrection</title>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+  <script>
+    $(function () {
+      $('#navigation').load('/nav.html');
+    });
+  </script>
 </head>
 
 <body>
+  <div id="navigation"></div>
   <iframe class="movie-trailer" src="https://www.youtube.com/embed/9ix7TUGVYIo" title="YouTube video player"
     frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
     allowfullscreen></iframe>
