--- a/frontend/nav.html
+++ b/frontend/nav.html
@@ -2,11 +2,11 @@
 
   <div class="nav-container">
 
-    <img class="logo" src="images/logo.jpg" alt="logo"></ul>
+    <img class="logo" src="/images/logo.jpg" alt="logo"></ul>
 
     <nav class="nav-list">
       <ul>
-        <li><a href="index.html">Start</a></li>
+        <li><a href="/index.html">Start</a></li>
         <li><a href="#movies">Filmer</a></li>
         <li><a href="#">Om oss</a></li>
         <li><a href="#bottom">kontakt</a></li>
