--- a/frontend/show.html
+++ b/frontend/show.html
@@ -2,15 +2,22 @@
 <html lang="en">
 
 <head>
+
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Visning</title>
     <link rel="stylesheet" href="/style.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <script>
+        $(function () {
+            $('#navigation').load('/nav.html');
+        });
+    </script>
 </head>
 
 <body>
-
+    <div id="navigation"></div>
     <main id="showMain">
         <div id="showInfo"></div>
 
