--- a/frontend/nav.html
+++ b/frontend/nav.html
@@ -7,7 +7,7 @@
     <nav class="nav-list">
       <ul>
         <li><a href="/index.html">Start</a></li>
-        <li><a href="#movies">Filmer</a></li>
+        <li><a href="/index.html#movies">Filmer</a></li>
         <li><a href="#">Om oss</a></li>
         <li><a href="#bottom">kontakt</a></li>
       </ul>
