--- a/frontend/index.html
+++ b/frontend/index.html
@@ -13,6 +13,7 @@
   <script>
     $(function () {
       $('#navigation').load('/nav.html');
+      $('#bottom').load('/footer.html');
     });
   </script>
 
