--- a/frontend/movies html/Dune.html
+++ b/frontend/movies html/Dune.html
@@ -12,6 +12,7 @@
   <script>
     $(function () {
       $('#navigation').load('/nav.html');
+      $('#bottom').load('/footer.html');
     });
   </script>
 </head>
