--- a/frontend/movies html/The-Matrix-Resurrection.html
+++ b/frontend/movies html/The-Matrix-Resurrection.html
@@ -11,6 +11,7 @@
   <script>
     $(function () {
       $('#navigation').load('/nav.html');
+      $('#bottom').load('/footer.html');
     });
   </script>
 </head>
