removed quotations from footer

--- a/frontend/footer.html
+++ b/frontend/footer.html
@@ -2,10 +2,10 @@
 
   <div id="bottom">
     <br>
-    "Filmvisarna &nbsp;|&nbsp; Vi finns här: "
+    Filmvisarna &nbsp;|&nbsp; Vi finns här:
     <a title="Visa karta i ny flik..." target="_blank" href="https://goo.gl/maps/TRDRBXmcAz9w2bGw5">Någonstans i småland
       10</a>
-    ", 010-10 01 11 &nbsp;|&nbsp;"
+    , 010-10 01 11 &nbsp;|&nbsp;
     <a title="Maila till oss.." href="mailto:info@filmvisarna.nu">info@Filmvisarna.nu</a>
 
   </div>
