playing around with moviePage made so trailers can be viewed in fullscreen

--- a/frontend/movies html/moviePage.html
+++ b/frontend/movies html/moviePage.html
@@ -10,11 +10,9 @@
 </head>
 
 <body>
-    <h1>movies</h1>
     <div class="movie-title"></div>
-    <div class="movie-trailer-container">
-        <iframe class="movie-trailer" src="" frameborder="0"></iframe>
-    </div>
+    <div class="movie-trailer-container"></div>
+    <div class="movie-description-container"></div>
 
 
     <script src="/frontend/js/moviePage.js"></script>
