--- a/frontend/show.html
+++ b/frontend/show.html
@@ -20,6 +20,7 @@
 <body>
     <div id="navigation"></div>
     <main id="showMain">
+        <div id="movieTitle"></div>
         <div id="showInfo"></div>
 
         <div id="customerCategorySelection">
