--- a/frontend/nav.html
+++ b/frontend/nav.html
@@ -8,7 +8,7 @@
       <ul>
         <li><a href="/">Start</a></li>
         <li><a href="/#movies">Filmer</a></li>
-        <li><a href="#">Om oss</a></li>
+        <li><a href="/about.html">Om oss</a></li>
         <li><a href="#bottom">kontakt</a></li>
       </ul>
     </nav>
