played around with some styling some containers and tried eventlistener function

--- a/frontend/movies html/moviePage.html
+++ b/frontend/movies html/moviePage.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title class="movie-title-title">Document</title>
     <link rel="stylesheet" href="/frontend/style.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script>
@@ -17,9 +17,11 @@
 </head>
 
 <body>
-    <div class="movie-title"></div>
+    <div class="movie-title-container"></div>
     <div class="movie-trailer-container"></div>
     <div class="movie-description-container"></div>
+    <div class="movie-poster-container"><img class="movie-poster-description-page" src="/frontend/images/Dune.jpg"
+            alt=""></div>
 
 
     <script src="/frontend/js/moviePage.js"></script>
