Fixed nav bar in SPA

--- a/singleIndex.html
+++ b/singleIndex.html
@@ -12,13 +12,18 @@
 <body>
   <header>
     <div class="nav-container">
-    
+
       <img class="logo" src="./frontend/images/logo.jpg" alt="logo"></ul>
 
-    <h1></h1>
-    <a href="#">Start</a> |
-    <a href="#products">Products</a> |
-    <a href="#aboutus">About us</a>
+      <nav class="nav-list">
+        <ul>
+          <li><a href="#">Start</a></li>
+          <li><a href="#products">Filmer</a></li>
+          <li><a href="#aboutus">Om oss</a></li>
+          <li><a href="#bottom">kontakt</a></li>
+        </ul>
+      </nav>
+    </div>
     <hr>
   </header>
   <main></main>
