--- a/frontend/show.html
+++ b/frontend/show.html
@@ -61,6 +61,7 @@
 
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
         <script src="/jsonflex.js"></script>
+        <script src="/js/book.js"></script>
         <script src="/js/show.js"></script>
 
     </main>
