--- a/SPA/singleIndex.html
+++ b/SPA/singleIndex.html
@@ -5,7 +5,8 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="singleStyle.css">
+  <link rel="stylesheet" href="/SPA/singleStyle.css">
+  <link rel="stylesheet" href="/frontend/fim-info.css">
   <title>Filmvisarna</title>
 </head>
 
@@ -13,7 +14,7 @@
   <header>
     <div class="nav-container">
 
-      <img class="logo" src="./frontend/images/logo.jpg" alt="logo"></ul>
+      <img class="logo" src="/frontend/images/logo.jpg" alt="logo"></ul>
 
       <nav class="nav-list">
         <ul>
@@ -40,7 +41,9 @@
     </div>
   </footer>
   <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-  <script src="singleMain.js"></script>
+  <script src="/node_modules/jsonflex/jsonflex.js"></script>
+  <script src="/SPA/singleMain.js"></script>
+  <script src="/frontend/js/movie.js"></script>
   <script>readJson();</script>
 </body>
 
