Co-authored-by: MergimJakupi <MergimJakupi@users.noreply.github.com> Co-authored-by: GHHag <GHHag@users.noreply.github.com> calculated price

--- a/frontend/show.html
+++ b/frontend/show.html
@@ -51,6 +51,7 @@
                     </span>
                 </p>
             </div>
+            <div id="total-price-container"></div>
         </div>
 
         <div id="auditoriumContainer">
