--- a/frontend/show.html
+++ b/frontend/show.html
@@ -58,6 +58,10 @@
             <div id="seatsToSelect">Välj säten (0)</div>
             <div id="screen"></div>
             <div id="seats"></div>
+            
+            <div id="confirm-btn">
+            <button id= "btn">Köp</button>
+        </div>
         </div>
 
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
