Co-authored-by: Nardos22 <Nardos22@users.noreply.github.com>

--- a/frontend/show.html
+++ b/frontend/show.html
@@ -63,6 +63,7 @@
             <button id= "btn">Köp</button>
         </div>
         </div>
+        </div>
 
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
         <script src="/jsonflex.js"></script>
