added elements and styling to auditorium

--- a/frontend/show.html
+++ b/frontend/show.html
@@ -55,13 +55,21 @@
         </div>
 
         <div id="auditoriumContainer">
+            <div id="seatTypes">
+                <div class="seat"></div>
+                <p>Tillgängligt säte</p>
+                <div class="seatOccupied"></div>
+                <p>Upptaget säte</p>
+                <div class="seatSelected"></div>
+                <p>Valt säte</p>
+            </div>
             <div id="seatsToSelect">Välj säten (0)</div>
             <div id="screen"></div>
             <div id="seats"></div>
-            
+
             <div id="confirm-btn">
-            <button id= "btn">Köp</button>
-        </div>
+                <button id="btn">Köp</button>
+            </div>
         </div>
 
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
