SPA firstpage. animation background etc

--- a/SPA/singleIndex.html
+++ b/SPA/singleIndex.html
@@ -11,6 +11,9 @@
 </head>
 
 <body>
+  <video poster="/frontend/images/logo.jpg" autoplay playsinline muted loop>
+    <source src="background.mp4" type="video/mp4">
+  </video>
   <header>
     <div class="nav-container">
 
@@ -43,7 +46,7 @@
   <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
   <script src="/node_modules/jsonflex/jsonflex.js"></script>
   <script src="/SPA/singleMain.js"></script>
-  <!--<script>readJson();</script>-->
+  <script>readJson();</script>
   
   
 </body>
