the slideshow image are new also clickable

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -24,7 +24,7 @@
 <body>
   <div id="navigation"></div>
   <main>
-    <div id="showSchedule">
+    <div id="showSchedule"> 
       <h2>Visningar</h2>
       <p>Välj datum</p>
       <select id="dateSelect"></select>
@@ -33,25 +33,28 @@
 
     <div class="container">
       <div class="image">
-        <img src="/images/Dune.jpg" alt="">
+        <a href="/movies html/Dune.html"> <img src="/images/movieSliderImages/Dune_wallpaper.jpg" alt="">
+          </a>
       </div>
       <div class="image">
-        <img src="/images/Finch.png" alt="">
+        <a href="/movies html/Eternals.html"><img src="/images/movieSliderImages/eternals_wallpaper.jpg" alt="">
+          </a>
       </div>
       <div class="image">
-        <img src="/images/Red-Notice.png" alt="">
+        <a href="/movies html/The-Matrix-Resurrection.html"><img src="/images/movieSliderImages/matrixResurections_wallpaper.jpg" alt="">
+        </a>
       </div>
       <div class="image">
-        <img src="/images/The-Matrix-Resurrections.png" alt="">
+        <a href="/movies html/Red-Notice.html"><img src="/images/movieSliderImages/redNotice_wallpaper.jpg" alt="">
+        </a>
       </div>
-    </div>
-
-    <div class="container">
+      
       <div class="button">
         <a onclick="nextimg(-1)" class="prev">&#10094;</a>
         <a onclick="nextimg(1)" class="next">&#10095;</a>
       </div>
     </div>
+
 
     
   </main>
