fixed the carousel on SPA changed posters + michelle

--- a/SPA/singleIndex.html
+++ b/SPA/singleIndex.html
@@ -7,6 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="/SPA/singleStyle.css">
   <link rel="stylesheet" href="/frontend/fim-info.css">
+  <link rel="stylesheet" href="/frontend/css-folders/carousel.css">
   <title>Filmvisarna</title>
 </head>
 
@@ -32,23 +33,25 @@
   </header>
   <main></main>
   <footer>
-  
+
     <div id="bottom">
       <br>
       Filmvisarna &nbsp;|&nbsp; Vi finns här:
-      <a title="Visa karta i ny flik..." target="_blank" href="https://goo.gl/maps/TRDRBXmcAz9w2bGw5">Någonstans i småland
+      <a title="Visa karta i ny flik..." target="_blank" href="https://goo.gl/maps/TRDRBXmcAz9w2bGw5">Någonstans i
+        småland
         10</a>
       , 010-10 01 11 &nbsp;|&nbsp;
       <a title="Maila till oss.." href="mailto:info@filmvisarna.nu">info@Filmvisarna.nu</a>
-  
+
     </div>
   </footer>
   <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
   <script src="/node_modules/jsonflex/jsonflex.js"></script>
   <script src="/SPA/singleMain.js"></script>
+  <script src="/frontend/js/carousel.js"></script>
   <script>readJson();</script>
-  
-  
+
+
 </body>
 
 </html>
