changes to spa version

--- a/frontend_spa/index.html
+++ b/frontend_spa/index.html
@@ -9,6 +9,7 @@
   <title>Filmvisarna</title>
   <link rel="stylesheet" href="/style.css">
   <link rel="stylesheet" href="/fim-info.css">
+  <link rel="stylesheet" href="/carousel.css">
 
 </head>
 
@@ -26,6 +27,7 @@
   <script src="/jsonflex.js"></script>
   <script src="/js/routes.js"></script>
   <script src="/js/renderComponents.js"></script>
+  <script src="/js/carousel.js"></script>
   <script src="/js/show_schedule.js"></script>
   <script src="/js/book.js"></script>
   <script src="/js/movie.js"></script>
