changes to styling, added show_page_style, bug fix

--- a/frontend_spa/index.html
+++ b/frontend_spa/index.html
@@ -8,6 +8,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Filmvisarna</title>
   <link rel="stylesheet" href="/style.css">
+  <link rel="stylesheet" href="/show_page_style.css">
   <link rel="stylesheet" href="/fim-info.css">
   <link rel="stylesheet" href="/carousel.css">
 
