bunch of css and cleaning up code

--- a/frontend_spa/index.html
+++ b/frontend_spa/index.html
@@ -11,12 +11,14 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Lora:wght@400;700&family=Work+Sans&display=swap"
     rel="stylesheet">
+  <link rel="stylesheet" href="/css-folder/start.css">
   <link rel="stylesheet" href="/css-folder/style.css">
   <link rel="stylesheet" href="/css-folder/show_page_style.css">
   <link rel="stylesheet" href="/css-folder/fim-info.css">
   <link rel="stylesheet" href="/css-folder/carousel.css">
   <link rel="stylesheet" href="/css-folder/about-us.css">
   <link rel="stylesheet" href="/css-folder/nav-footer.css">
+
 
 </head>
 
