--- a/frontend_spa/index.html
+++ b/frontend_spa/index.html
@@ -18,6 +18,7 @@
   <link rel="stylesheet" href="/css-folder/carousel.css">
   <link rel="stylesheet" href="/css-folder/about-us.css">
   <link rel="stylesheet" href="/css-folder/nav-footer.css">
+  <link rel="stylesheet" href="/css-folder/ticket.css">
 
 
 </head>
